force-app/main/default/objects/Vehicle_Repair_Service_Package__c/Vehicle_Repair_Service_Package__c.object-meta.xml
<CustomObject>
    <description>This object will capture information and show link among service package purchased by the customer, on which repairs service package is used, on which repair quotes it is used and on which Job order it is used.</description>
    <label>Vehicle Repair Service Package</label>
    <nameField>
        <displayFormat>VRSP-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Repair Service Package</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>