force-app/main/default/objects/Vehicle_Repair_Service_Package__c/fields/Job_Order__c.field-meta.xml
<CustomField>
    <fullName>Job_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Vehicle Repair Service Package</relationshipLabel>
    <relationshipName>Vehicle_Repair_Service_Package</relationshipName>
    <type>Lookup</type>
</CustomField>