force-app/main/default/objects/Vehicle_Repair_Service_Package__c/fields/Repair__c.field-meta.xml
<CustomField>
    <fullName>Repair__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will show the repair record for this vehicle repair service package.</description>
    <label>Service Booking</label>
    <referenceTo>Repair__c</referenceTo>
    <relationshipLabel>Vehicle Repair Service Package</relationshipLabel>
    <relationshipName>Vehicle_Repair_Service_Package</relationshipName>
    <type>Lookup</type>
</CustomField>