force-app/main/default/objects/Vehicle_Repair_Service_Package__c/fields/Repair_Quote__c.field-meta.xml
<CustomField>
    <fullName>Repair_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will show vehicle service package is used for which repair quote.</description>
    <label>Repair Quote</label>
    <referenceTo>RepairQuote__c</referenceTo>
    <relationshipLabel>Vehicle Repair Service Package</relationshipLabel>
    <relationshipName>Vehicle_Repair_Service_Package</relationshipName>
    <type>Lookup</type>
</CustomField>