force-app/main/default/objects/Vehicle_Repair_Service_Package__c/fields/Vehicle_Service_Package__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Service_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will show the vehicle service package used for the vehicle repair.</description>
    <label>Vehicle Service Package</label>
    <referenceTo>VehicleServicePackage__c</referenceTo>
    <relationshipLabel>Vehicle Repair Service Package</relationshipLabel>
    <relationshipName>Vehicle_Repair_Service_Package</relationshipName>
    <type>Lookup</type>
</CustomField>